<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home_main_menu"
        android:icon="@drawable/ic_baseline_house_24"
        android:title="Home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_baseline_share_24"
        android:title="@string/share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_code"
        android:icon="@drawable/ic_baseline_code_24"
        android:iconTint="@color/black"
        android:orderInCategory="100"
        android:title="@string/code" />
    <item
        android:id="@+id/menu_call"
        android:icon="@drawable/ic_baseline_phone_24"
        android:iconTint="@color/black"
        android:orderInCategory="100"
        android:title="@string/call" />
    <item
        android:id="@+id/menu_help"
        android:icon="@drawable/ic_baseline_phone_24"
        android:iconTint="@color/black"
        android:orderInCategory="100"
        android:title="@string/help" />
</menu>